<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ouster_full_pipe_demo</name>
    <version>0.0.0</version>
    <description>Package file for Ouster full-pipeline demo.</description>
    <maintainer email="lebherz@student.tugraz.at">Andreas Lebherz</maintainer>
    <license>Apache License 2.0</license>

    <!-- Building process will not be performed.-->
    <!-- This package is used for only launching.-->

    <depend>ament_index_python</depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>ouster_node</exec_depend>
    <exec_depend>voxel_grid_nodes</exec_depend>
    <exec_depend>ray_ground_classifier_nodes</exec_depend>0
    <exec_depend>euclidean_cluster_nodes</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
